<resources>
    <string name="app_name">2DAMA_GRUP1</string>
    <string name="nom_signUp">Nombre</string>
    <string name="cognoms_signUp">Apellidos</string>
    <string name="pwd_signUp">Contraseña</string>
    <string name="email_signUp">Email</string>
    <string name="tlf_signUp">Teléfono</string>
    <string name="descripcio_signUp">Descripción (Opcional)</string>
    <string name="btn_solicitar_artista">Solicitar Artista</string>
    <string name="registrarse_btn_signUp">Registrarse</string>
    <string name="loginButton">Iniciar Sesión</string>
    <string name="registerButton">Registrarse</string>
    <string name="InputLogin1">Usuario / Email</string>
    <string name="InputLogin2">Contraseña</string>
    <string name="carritoTitulo">Carrito</string>
    <string name="carritoProducto">Producto</string>
    <string name="carritoCantidad">Cantidad</string>
    <string name="carritoPrecio">Precio</string>
    <string name="carritoReservar">Reservar</string>
    <string name="profileDatosButton">DATOS</string>
    <string name="profileProductosButton">Productos</string>
    <string name="profileReservasButton">Reservas</string>
    <string name="profileHistorialButton">Historial</string>
    <string name="profileArtistaButton">ARTISTA</string>
    <string name="profileDeleteButton">Eliminar Cuenta</string>
    <string name="userUpdateButton">Actualizar Perfil</string>
    <string name="uploadProdcutName">Nombre del Producto</string>
    <string name="uploadName">Nombre del Producto</string>
    <string name="uploadProductPrice">Precio</string>
    <string name="uploadStock">Stock</string>
    <string name="uploadDescripcion">Descripción</string>
    <string name="mainpageProductosDestacados">Productos Destacados</string>
    <string name="mainpageProductosProx">Productos por Proximidad</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string-array name="ProductTitles">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>

    <string-array name="ProductPrices">
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
        <item>100€</item>
    </string-array>

    <string name="productNameMissatge">Product name</string>
    <string name="inputMissatge">Escribe un mensaje</string>

    <string name="subir_producto">Subir</string>
    <string name="profile_upload_product">Subir</string>
    <string name="menu_my_profile">Mi perfil</string>
    <string name="menu_upload">Subir</string>
    <string name="menu_logOut">Cerrar sesión</string>
    <string name="reservar_btn">CHAT</string>
    <string name="stock_product_info">Stock</string>
    <string name="price_product_info">Precio</string>
    <string name="descripcio_product_info">DESCRIPCIÓN</string>
    <string name="product_name_info">Nombre del producto</string>
    <string name="upload_image_upProduct">Subir imagen</string>
    <string name="profile_update_pwd">Contraseña</string>
    <string name="title_activity_chat_list">chatList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Messages">Messages</string>

</resources>