<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/plastic_precios_login" />

    <EditText
        android:id="@+id/inputUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPersonName"
        android:hint="@string/InputLogin1"
        android:textAlignment="center"
        android:textColor="#939292"/>

    <EditText
        android:id="@+id/inputPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:hint="@string/InputLogin2"
        android:textAlignment="center"
        android:textColor="#939292" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green"
            android:onClick="checkLogIn"
            android:layout_marginEnd="10dp"
            android:text="@string/loginButton" />

        <Button
            android:id="@+id/logIn_to_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green"
            android:onClick="openSignUp"
            android:layout_marginStart="10dp"
            android:text="@string/registerButton" />
    </LinearLayout>

</LinearLayout>