<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_update">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context=".sign_up">

        <ImageView
            android:id="@+id/upadte_profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_update_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nom_signUp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77EC62"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/profile_update_cognoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/cognoms_signUp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_update_cognoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77EC62"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/profile_update_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/profile_update_pwd"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputd_update_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77EC62"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/profile_update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email_signUp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77EC62"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/profile_update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/descripcio_signUp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_update_description"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:background="#77EC62"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/userUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#62ECC0"
                android:text="@string/userUpdateButton"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>