<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carritoTitulo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#77EC62"
            android:fontFamily="sans-serif"
            android:text="@string/carritoProducto"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#77EC62"
            android:text="@string/carritoCantidad"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#62ECC0"
            android:text="@string/carritoPrecio"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Producte 1"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:backgroundTint="#77EC62"
            android:text="@string/carritoReservar"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_send"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

</LinearLayout>